welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();

def pasDeSerpent(){
if(estFaceMur()==true){
	if(getDirection() == Direction.EST){gauche(); avance(); droite();}
	else{if (getDirection() == Direction.OUEST){droite();avance();gauche();}}
}else{avance();}
}
def fonctionTest(){
	if(getDirection()==Direction.NORD && estFaceMur()==true){return true}
	else{return false}
	
}
fontionTest();
while (fonctionTest()==false){pasDeSerpent(); fonctionTest();}
}
